# Spiking-Vocos

./: .gitignore  README.md  energy_compare.py  hifigan_inference.py  inference.py  plot_metrics_comparison.py  pyproject.toml  train.py
configs/: vocos-spiking-TSM-distill.yaml  vocos-spiking-TSM.yaml  vocos-spiking-distill.yaml  vocos-spiking.yaml  vocos.yaml
metrics/: UTMOS.py
vocos/: experiment.py  experiment_TSM_distill.py  experiment_distill.py  heads.py  helpers.py  loss.py  models.py  modules.py  spiking_modelsv3.py  spiking_modelsv3_TSM.py  spiking_modelsv3_TSM_distill.py  spiking_modelsv3_distill.py
